# 30_python_projects_for_2023

./: README.md
CLI/weather_cli/: .gitignore  README.md  pyproject.toml
CLI/weather_cli/weather_cli/: access_api_key.py  cli.py  query_api.py  secrets.ini
CLI/youtube_cli/: .gitignore  README.md  pyproject.toml
CLI/youtube_cli/youtube_cli/: cli.py  demo.py  videos.py
